<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/battleship_background_small"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="345dp"
            android:layout_height="49dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_input"
            android:hint="@string/username"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/darkGrey"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.481"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/username_input"
            app:layout_constraintEnd_toEndOf="@+id/username_input" android:id="@+id/password_input"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/username_input" android:hint="@string/password"
            android:textColor="@color/darkGrey"
            android:textColorHint="@color/darkGrey"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="49dp" app:layout_constraintStart_toStartOf="@+id/password_input"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/password_input"
            android:layout_marginBottom="16dp" android:id="@+id/button" android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
            android:background="@color/colorPrimary" android:textColor="@color/white" android:onClick="login"/>
    <TextView
            android:text="@string/ship_battle"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView" android:textSize="36sp"
            android:textColor="@color/darkGrey"
            android:fontFamily="@font/new_rocker" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/button"
            android:textColor="@color/design_default_color_primary" android:onClick="createUser"/>
</android.support.constraint.ConstraintLayout>